--- a/package.json
+++ b/package.json
@@ -1,23 +1,14 @@
 {
   "name": "ovofansserver",
   "version": "1.0.0",
-  "description": "ovofans server - Express API serving Drake albums for the ovoFans client",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
-  "engines": {
-    "node": "18.x"
+    "start": "node server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
-  },
-  "license": "MIT"
+  }
 }
 
